# client-manager

./: .gitignore  instruction.txt
backend/: manage.py  pyproject.toml
backend/api/: models.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/client_manager/: asgi.py  models.py  serializers.py  settings.py  views.py  wsgi.py
backend/client_manager/migrations/: 0001_initial.py  0002_alter_client_id_alter_clientstatus_id_alter_note_id_and_more.py  0003_rename_name_client_first_name_client_last_name_and_more.py  0004_note_created_at.py  0005_transaction_date.py  0006_interaction.py  0007_alter_note_options_alter_transaction_options.py  0008_remove_client_status_delete_clientstatus.py
backend/fixtures/: initial_data.json
backend/users/: serializers.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend-old/: package-lock.json  package.json
frontend/src/: index.css  main.tsx  theme.ts
frontend/src/api/: auth.ts  client.ts  index.ts  interactions.ts  note.ts  profile.ts  song.ts  statuses.ts  transactions.ts  user.ts
frontend/src/components/: AddClient.tsx  AddClientForm.tsx  AuthForm.tsx  ClientSearch.tsx  ClientStatus.tsx  ClientsList.tsx  Comments.tsx  DeleteButton.tsx  EngagementStatus.tsx  Header.tsx  LanguageSelect.tsx  Navbar.tsx  Notes.tsx  Player.tsx  Profile.tsx  ProtectedRoute.tsx  RegisterForm.tsx  TransactionsList.tsx
frontend/src/i18n/: config.ts  en.json  ru.json
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
(+64 files in other folders)
