[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mr Hackerman <someuser@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
